Fixes #22, multiple searches yields flickering

--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -19,8 +19,9 @@
 
   .loader {
     display: none;
-    margin-top: $base-line-height * 1.5;
-    width: $font-size-base * 3;
+    right: -25px;
+    position: absolute;
+    width: 32px;
   }
 
   .results {
@@ -35,6 +36,7 @@
     }
 
     .meme {
+      margin-bottom: $base-line-height * 2;
       padding-top: $base-line-height * 2;
       max-width: 100%;
     }
